hw15: order products
